prevent image stretching

--- a/public/styles/bifrost.css
+++ b/public/styles/bifrost.css
@@ -141,8 +141,8 @@ body {
 }
 
 .img {
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 .delete {
